fix: Last round of changes across docker and k8s for consistency, document requirements going forward for agents and humans

--- a/.dockerignore
+++ b/.dockerignore
@@ -17,6 +17,13 @@
 .vscode
 **/*.swp
 
+# Python version pins (dev uses 3.13, Docker images may use 3.12)
+**/.python-version
+
+# Environment files with secrets
+**/.env
+**/.env.*
+
 # Build artifacts
 **/dist
 **/build
