--- a/examples/production/k8s/stepflow/opensearch/deployment.yaml
+++ b/examples/production/k8s/stepflow/opensearch/deployment.yaml
@@ -31,6 +31,9 @@ spec:
         app: opensearch
         component: search
     spec:
+      # Note: No pod-level runAsNonRoot/runAsUser here. OpenSearch manages its own
+      # internal user (uid 1000) and needs writable access to data volumes.
+      # Only container-level allowPrivilegeEscalation is restricted.
       containers:
       - name: opensearch
         image: localhost/opensearch-jvector:latest
