--- a/examples/production/k8s/stepflow-config.yml
+++ b/examples/production/k8s/stepflow-config.yml
@@ -37,9 +37,8 @@
 #     - Port: 9200
 #     - Env vars: OPENSEARCH_HOST, OPENSEARCH_PORT
 #
-#   Docling (document processing, PDF/DOCX parsing):
-#     - DNS: docling-serve.stepflow.svc.cluster.local
-#     - Port: 5001
+#   Docling-serve (document processing sidecar, accessed by docling-worker pods):
+#     - DNS: localhost:5001 (sidecar within docling-worker pod)
 #     - Env vars: DOCLING_SERVE_URL
 #
 # =============================================================================
@@ -59,10 +58,28 @@ plugins:
     transport: http
     url: "http://stepflow-load-balancer.stepflow.svc.cluster.local:8080"
 
+  # Docling components via dedicated load balancer
+  # Distributes requests across docling-worker pods using least-connections
+  docling_k8s:
+    type: stepflow
+    transport: http
+    url: "http://stepflow-load-balancer-docling.stepflow.svc.cluster.local:8080"
+
 # Routing rules
 # Routes are evaluated in order; first match wins
 routes:
-  # Route all /langflow/* components to Kubernetes cluster
+  # Route docling components to dedicated docling-worker via LB
+  # Components: DoclingInlineComponent, DoclingRemoteComponent,
+  #             ChunkDoclingDocument, ExportDoclingDocument
+  "/docling/{*component}":
+    - plugin: docling_k8s
+
+  # Route lfx docling components (from known_components.py) to docling-worker
+  # These paths come from workflows converted with known component mappings
+  "/langflow/core/lfx/components/docling/{*component}":
+    - plugin: docling_k8s
+
+  # Route all other /langflow/* components to Kubernetes cluster
   # Examples: /langflow/rag_query, /langflow/embed_document
   "/langflow/{*component}":
     - plugin: langflow_k8s
