feat: Wire automatic blobification into execution pipeline
Add capability negotiation and threshold-based blobification to the
orchestrator-worker protocol. The orchestrator sends blob_threshold in
RuntimeCapabilities during initialization; workers report
supports_blob_refs in InitializeResult. When both conditions are met,
the orchestrator blobifies large input fields before sending them and
resolves blob refs in outputs received from workers. The Python SDK
server resolves blob refs in inputs and blobifies large outputs
symmetrically.

--- a/schemas/stepflow-config.json
+++ b/schemas/stepflow-config.json
@@ -213,6 +213,15 @@
           ],
           "description": "URL workers use to access the blob API.\n\nIf not set, defaults to `http://localhost:{port}/api/v1/blobs` where `{port}`\nis the server's bound port.\n\nThis value should be the base blobs endpoint URL. Workers will:\n- `POST {url}` to create blobs\n- `GET {url}/{blob_id}` to fetch blobs\n\nExamples:\n- Local dev: omit (auto-detected)\n- K8s with orchestrator blobs: `http://orchestrator-service/api/v1/blobs`\n- K8s with separate blob service: `http://blob-service/api/v1/blobs`",
           "default": null
+        },
+        "blobThreshold": {
+          "type": [
+            "integer",
+            "null"
+          ],
+          "description": "Byte size threshold for automatic blobification of component inputs/outputs.\n\nWhen a top-level field in a component's input or output exceeds this size\n(in bytes of JSON serialization), it is automatically stored as a blob and\nreplaced with a `$blob` reference.\n\nSet to `0` to disable automatic blobification.\nDefault: `0` (disabled)",
+          "default": null,
+          "minimum": 0
         }
       }
     },
