feat: Default blob threshold to 1MB, add Phase 2 tests
Change default blob threshold from 0 (disabled) to 1MB so automatic
blobification is on by default. Add integration tests for capability
negotiation and auto-blobify wiring. Fix httpx client lifecycle across
event loops in test environments.

--- a/schemas/stepflow-config.json
+++ b/schemas/stepflow-config.json
@@ -219,7 +219,7 @@
             "integer",
             "null"
           ],
-          "description": "Byte size threshold for automatic blobification of component inputs/outputs.\n\nWhen a top-level field in a component's input or output exceeds this size\n(in bytes of JSON serialization), it is automatically stored as a blob and\nreplaced with a `$blob` reference.\n\nSet to `0` to disable automatic blobification.\nDefault: `0` (disabled)",
+          "description": "Byte size threshold for automatic blobification of component inputs/outputs.\n\nWhen a top-level field in a component's input or output exceeds this size\n(in bytes of JSON serialization), it is automatically stored as a blob and\nreplaced with a `$blob` reference.\n\nSet to `0` to disable automatic blobification.\nDefault: 1 MB (1048576 bytes)",
           "default": null,
           "minimum": 0
         }
